# ArchiveBox

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  PDF处理问题修复说明.md  PDF失败文件详情显示功能.md  README.md  cleanup_feature_summary.md  test_cleanup.md  技术设计文档.md  离线ZIP资料聚合与导出桌面程序-需求说明书.md
.github/workflows/: build.yml
frontend/: index.html  main.js  style.css
src-tauri/: Cargo.toml  icon_excel.emf  icon_pdf.emf  icon_zip.emf  ole_package_icon.emf  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-archivebox-commands.toml
src-tauri/src/: lib.rs
