[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
anyhow = "1"
calamine = "0.26"
docx-rs = { version = "0.4", features = ["image"] }
once_cell = "1"
rfd = "0.14"
regex = "1"
rust_xlsxwriter = "0.80"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
time = "0.3"
uuid = { version = "1", features = ["v4"] }
zip = "0.6.6"
quick-xml = "0.36"
lopdf = "0.35"
base64 = "0.22"
cfb = "0.7"
encoding_rs = "0.8"
